MDEV-34883 LOAD DATA INFILE with geometry data fails

We write field using field data charset, so we should read it
using the field charset.